fixed layout to work on smaller screens

--- a/chat/public/style.css
+++ b/chat/public/style.css
@@ -16,10 +16,10 @@ main {
 }
 
 #login-box {
-    min-height: 650px;
-    height: 75vh;
+    min-height: 75vh;
+    height: 600px;
     width: 100%;
-    overflow-y: auto;
+    overflow-y: hidden;
 }
 
 #sidenav {
